[gd_scene load_steps=7 format=3 uid="uid://7etikmyhrdvx"]

[ext_resource type="Theme" uid="uid://7qtjarwklgd2" path="res://ui/Themes/ui_theme.tres" id="1_3o1cy"]
[ext_resource type="Script" uid="uid://dyou6bxxtyrwn" path="res://ui/confirmation_window.gd" id="1_ttc13"]
[ext_resource type="FontFile" uid="uid://b35oh5m6k8148" path="res://ui/Themes/fragile-bombers.regular.otf" id="2_ttc13"]
[ext_resource type="Script" uid="uid://c3dfp0wsms6cl" path="res://ui/button_with_sounds.gd" id="4_rdop6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ttc13"]
bg_color = Color(0, 0, 0, 0.9411765)

[sub_resource type="LabelSettings" id="LabelSettings_rdop6"]
font = ExtResource("2_ttc13")
font_size = 30

[node name="ConfirmationWindow" type="Control" node_paths=PackedStringArray("confirmation_label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ttc13")
confirmation_label = NodePath("HBoxPivotContainer/ConfirmationContent/ConfirmationText")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ttc13")

[node name="HBoxPivotContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ControlLeft" type="Control" parent="HBoxPivotContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ConfirmationContent" type="VBoxContainer" parent="HBoxPivotContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_3o1cy")
alignment = 1

[node name="ConfirmationText" type="Label" parent="HBoxPivotContainer/ConfirmationContent"]
layout_mode = 2
size_flags_vertical = 10
size_flags_stretch_ratio = 0.7
text = "Are you sure?"
label_settings = SubResource("LabelSettings_rdop6")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxPivotContainer/ConfirmationContent"]
layout_mode = 2
alignment = 1

[node name="ButtonConfirm" type="Button" parent="HBoxPivotContainer/ConfirmationContent/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Yes"
script = ExtResource("4_rdop6")
metadata/_custom_type_script = "uid://c3dfp0wsms6cl"

[node name="ButtonCancel" type="Button" parent="HBoxPivotContainer/ConfirmationContent/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "No"
script = ExtResource("4_rdop6")
metadata/_custom_type_script = "uid://c3dfp0wsms6cl"

[node name="ControlBottom" type="Control" parent="HBoxPivotContainer/ConfirmationContent"]
layout_mode = 2
size_flags_vertical = 3

[node name="ControlRight" type="Control" parent="HBoxPivotContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="HBoxPivotContainer/ConfirmationContent/HBoxContainer/ButtonConfirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="HBoxPivotContainer/ConfirmationContent/HBoxContainer/ButtonCancel" to="." method="_on_cancel_pressed"]
